    contributed by Joachim Schimpf and with a bug fix for the SWI-Prolog
    implementation of the expand_path/2 predicate (resulting from recent
    changes to the SWI-Prolog absolute_file_name/3 built-in predicate).

    Correct a bug in some shell scripts where "#/bin/bash" was used instead
    of "#!/bin/bash". Thanks to Yiorgos Adamopoulos for the bug report.


2.42.4 - April 4, 2011

    Added an entity_prefix/2 predicate and two sets of utility predicates,
    decompile_predicate_heads/2-4 and decompile_predicate_indicators/2-4,
    to the "logtalk" built-in object. Marked the decompile_predicate_head/4
    and decompile_predicate_indicator/4 as deprecated.

    Added support for preserving the scope information for operators declared
    using scope directives during compile time. Added information on entity
    declared operators to the XML documenting files. Updated the text, PDF,
    and (X)HTML conversion scripts to print out operator information.

    Applied several low-level optimizations to the Logtalk compiler/runtime.

    Moved the internal predicates that construct and access the predicate
    execution context from the compiler to the Prolog config files in order
    to support fine performance tuning that is Prolog compiler dependent.

    Updated the implementation of the threaded/1 multi-threading built-in
    predicate in order to use a small performance optimization based on the
    term_variables/2 built-in predicate suggested by Timon Van Overveldt.
    This optimization aims to reduce unnecessary copy and unification of
    terms. In addition, replace the use of the setup_call_cleanup/3 built-in
    predicate with the catch/3 built-in predicate by simplifying handling of
    both master and slave threads, which also improves performance.

    Corrected a bug in the implementation of the threaded/1 multi-threading
    built-in predicate where failure by the user to specify independent goals